--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body{
     width: 1200px;
     background-color: #3e3e3e;
     margin: auto;
+    overflow-x: hidden;
 }
 body::before{
     content: '';
